--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -6,7 +6,7 @@ html {
     font-size: 1.25em;
 }
 body {
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'ABeeZee', sans-serif;
 }
 h2 {
     font-size: 1.5rem;
@@ -29,7 +29,7 @@ a {
     padding: 0 1rem;
 }
 header {
-    background: #57496e;
+    background: #19857B;
     color: #fff;
     padding: 1rem 0;
     margin-bottom: 2rem;
@@ -47,7 +47,7 @@ header li {
     font-size: .8rem;
 }
 header nav a {
-    color: #dbd;
+    color: #eafbf9;
 }
 header nav a:hover {
     color: #fff;
@@ -62,7 +62,7 @@ header nav a:hover {
     margin-left: .5rem;
 }
 .course--module {
-    background: #7c689b;
+    background: #24c1b3;
     border-radius: .5rem;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
@@ -81,7 +81,7 @@ header nav a:hover {
 }
 .course--add--module {
     background: #ddd9e4;
-    color: #57496e;
+    color: #0c403c;
     font-weight: 300;
     font-size: 1.25rem;
 }
@@ -89,7 +89,7 @@ header nav a:hover {
     width: 20px;
     height: auto;
     margin-right: 5px;
-    fill: #57496e;
+    fill: #0c403c;
 }
 .course--detail--title {
     padding-bottom: .25rem;
@@ -104,7 +104,7 @@ header nav a:hover {
     font-size: 2rem;
     margin-bottom: .5rem;
     font-weight: 700;
-    color: #47395e;
+    color: #1c968b;
 }
 .course--detail--list {
     font-weight: 300;
@@ -157,17 +157,17 @@ input, textarea {
     width: 100%;
     color: #332a40;
     border-radius: .5rem;
-    border: 1px solid #8c789b;
+    border: 1px solid #3edbcc;
     padding: .5rem;
     margin-bottom: 1rem;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'ABeeZee', sans-serif;
     font-size: .8rem;
 }
 textarea {
     min-height: 300px;
 }
 .button {
-    background: #7c689b;
+    background: #24c1b3;
     color: #fff;
     font-size: 1rem;
     padding: .75rem 1.5rem;
@@ -184,18 +184,18 @@ textarea {
     margin-bottom: 0;
 }
 .button:not(.button-secondary):hover {
-    background: #63537d;
+    background: #146b63;
     cursor: pointer;
 }
 .button-secondary {
-    color: #7c689b;
+    color: #24c1b3;
     background: none;
-    box-shadow: 0 0 0 2px #7c689b inset;
+    box-shadow: 0 0 0 2px #24c1b3 inset;
     transition: box-shadow 0.2s, color 0.2s;
 }
 .button-secondary:hover {
-    color: #63537d;
-    box-shadow: 0 0 0 2px #63537d inset;
+    color: #146b63;
+    box-shadow: 0 0 0 2px #146b63 inset;
     cursor: pointer;
 }
 input:focus, button:focus, .button:focus, textarea:focus {
